[package]
name = "playwright_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playwright = "*"
actix-web = "4.9.0"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"]}
serde = "*"
